--- a/025-正确传递参数.md
+++ b/025-正确传递参数.md
@@ -1,3 +1,4 @@
 # 说明：
 
-  ![Uploading image.png…]()
+  ![image](https://github.com/xiays146/cplusplus-101-programming-guidelines/assets/48829659/dc9d708d-d213-4162-88d3-30d4cfa47293)
+
